--- a/Main.java/src/view/UsuarioPanel.form
+++ b/Main.java/src/view/UsuarioPanel.form
@@ -44,12 +44,16 @@
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" alignment="0" attributes="0">
                                       <Component id="jLabel1" max="32767" attributes="0"/>
-                                      <EmptySpace min="114" pref="114" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="372" max="-2" attributes="0"/>
                                   </Group>
-                                  <Component id="CampoPesquisaNome" max="32767" attributes="0"/>
-                                  <Component id="BotaoApagarCampos" alignment="0" min="-2" pref="150" max="-2" attributes="0"/>
+                                  <Group type="102" attributes="0">
+                                      <Group type="103" groupAlignment="0" max="-2" attributes="0">
+                                          <Component id="BotaoApagarCampos" pref="150" max="32767" attributes="0"/>
+                                          <Component id="CampoPesquisaNome" max="32767" attributes="0"/>
+                                      </Group>
+                                      <EmptySpace min="-2" pref="258" max="-2" attributes="0"/>
+                                  </Group>
                               </Group>
-                              <EmptySpace min="-2" pref="258" max="-2" attributes="0"/>
                               <Group type="103" groupAlignment="0" attributes="0">
                                   <Group type="102" attributes="0">
                                       <Component id="jLabel2" max="32767" attributes="0"/>
@@ -106,7 +110,7 @@
                       </Group>
                   </Group>
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="47" max="-2" attributes="0"/>
                       <Component id="BotaoCadastrarUsuario1" min="-2" pref="40" max="-2" attributes="0"/>
                   </Group>
               </Group>
