--- a/Main.java/src/view/ProdutoPane.form
+++ b/Main.java/src/view/ProdutoPane.form
@@ -39,8 +39,6 @@
                   </Group>
                   <Group type="102" attributes="0">
                       <Component id="BotaoNovoProduto" min="-2" pref="140" max="-2" attributes="0"/>
-                      <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="BotaoAtualizar" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="32767" attributes="0"/>
                       <Component id="BotaoRemoverProduto" min="-2" pref="140" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
@@ -48,6 +46,11 @@
                   </Group>
               </Group>
               <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
+          </Group>
+          <Group type="102" alignment="0" attributes="0">
+              <EmptySpace min="-2" pref="123" max="-2" attributes="0"/>
+              <Component id="BotaoAtualizar" min="-2" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -64,12 +67,13 @@
                   <Component id="CampoPesquisaNome" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="ComboBoxCategoria" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace min="-2" pref="72" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
+              <Component id="BotaoAtualizar" min="-2" pref="40" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="jScrollPane1" pref="177" max="32767" attributes="0"/>
               <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="BotaoNovoProduto" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
-                  <Component id="BotaoAtualizar" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                   <Component id="BotaoCadastrarCategoria" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
                   <Component id="BotaoRemoverProduto" alignment="3" min="-2" pref="40" max="-2" attributes="0"/>
               </Group>
