--- a/Main.java/src/view/CadastroUsuarioView.form
+++ b/Main.java/src/view/CadastroUsuarioView.form
@@ -341,6 +341,10 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="CampoCadastroCEP">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="CampoCadastroCEPActionPerformed"/>
+        <EventHandler event="keyTyped" listener="java.awt.event.KeyListener" parameters="java.awt.event.KeyEvent" handler="CampoCadastroCEPKeyTyped"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="BotaoAtualizarCEP">
       <Properties>
