--- a/Main.java/src/view/VendaPane.form
+++ b/Main.java/src/view/VendaPane.form
@@ -451,7 +451,7 @@
     </Component>
     <Component class="javax.swing.JButton" name="BotaoConcluirVenda">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Concluir Venda"/>
+        <Property name="text" type="java.lang.String" value="Escolher m&#xe9;todo de pagamento"/>
       </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotaoConcluirVendaActionPerformed"/>
